<resources>
    <string name="app_name">EletricCarDio</string>
    <string name="eletric_car">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="r_299_000">R$ 299.000,00</string>
    <string name="_350_00_kwh">350,00 kWh</string>
    <string name="_120_cv">120 cv</string>
    <string name="_30_min">30 min</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="no_wifi">Ops, parece que você não está conectado no momento.</string>
    <string name="saved_calc">saved_calc</string>
</resources>