<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/eletric_car"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tab_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carros"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="@id/titulo"
        app:layout_constraintTop_toBottomOf="@id/titulo"/>

    <TextView
        android:id="@+id/tab_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/tab_carros"
        app:layout_constraintLeft_toRightOf="@id/tab_carros"/>

    <ImageView
        android:id="@+id/image_elect_car"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/twotone_electric_car_24"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tab_carros" />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_elect_car"/>

    <TextView
        android:id="@+id/tv_preco_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_299_000"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        app:layout_constraintTop_toBottomOf="@id/image_elect_car"/>

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bateria"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"/>

    <TextView
        android:id="@+id/tv_bateria_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_350_00_kwh"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"/>

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potencia"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"/>

    <TextView
        android:id="@+id/tv_potencia_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_120_cv"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"/>

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recarga"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"/>

    <TextView
        android:id="@+id/tv_recarga_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30_min"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"/>

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="preço kWh"
        android:maxLength="10"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_recarga"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="km percorrido"
        android:maxLength="10"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_preco_kwh"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="calcular"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        tools:ignore="VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>