<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/material_dynamic_neutral95"
        android:elevation="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">

            <ImageView
                android:id="@+id/image_elect_car"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/twotone_electric_car_24"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/preco"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_elect_car"/>

            <TextView
                android:id="@+id/tv_preco_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="16dp"
                android:text="@string/r_299_000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_elect_car"/>

            <TextView
                android:id="@+id/tv_bateria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:text="@string/bateria"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"/>

            <TextView
                android:id="@+id/tv_bateria_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="6dp"
                android:text="@string/_350_00_kwh"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria"/>

            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:text="@string/potencia"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria"/>

            <TextView
                android:id="@+id/tv_potencia_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="6dp"
                android:text="@string/_120_cv"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"/>

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:text="@string/recarga"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"/>

            <TextView
                android:id="@+id/tv_recarga_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="6dp"
                android:text="@string/_30_min"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>